Fixing About page visual bugs on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     white-space: nowrap;
     margin: 0 auto;
     letter-spacing: 0.1em;
-    animation: typewriter 1s steps(30, end), blink-caret 0.75s step-end infinite;
+    animation: typewriter .8s steps(17, end), blink-caret 0.75s step-end infinite;
   }
   
   @keyframes typewriter {
